--- a/views/main.ejs
+++ b/views/main.ejs
@@ -2,7 +2,7 @@
 <main class="main-container">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-2 levo-container">
+           <!--  <div class="col-lg-2 levo-container">
                 <nav>
                         <ul>
                           <li><a href="#">This is just a sidebar</a></li>
@@ -16,9 +16,9 @@
                           <li><a href="#">For appereanace only</a></li>
                         </ul>
                 </nav>
-            </div>
+            </div> -->
             <!-- Left Container (Larger) -->
-            <div class="col-lg-7 col-sm-12 middle-container">
+            <div class="col-lg-9 col-sm-12 middle-container">
                 <% if (locals.sitePostoj && locals.sitePostoj.length >= 1){ %>
                             <div class="celMainPost">
                                 <div class="MainPostContent">
