--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -14,6 +14,9 @@ body
     padding: 10px;
 }
 
+.container-fluid {
+    width: 80%;
+}
 
 .main-container {
     margin: 0 20px;
@@ -141,7 +144,6 @@ footer > p {
 .levo-container {
     display: flex;
     justify-content: baseline;
-    background-color: #0d6efd;
     
 }
 nav > ul {
