--- a/views/cpost.ejs
+++ b/views/cpost.ejs
@@ -1,6 +1,6 @@
 <%- include("partials/header.ejs") %>
 <main class="main-container">
-  <form class="mx-auto col-5" action="/submit" method="Post">
+  <form class="mx-auto col-5 formaPost" action="/submit" method="Post">
     <div class="mb-3">
       <label for="naslov" class="form-label">Vnesi Naslov:</label>
       <input type="text" maxlength="30" class="form-control" name="naslov" required>
