Changed search placeholder

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -34,7 +34,7 @@
                                             <% } %>
                                                     <p class="RecentPostByKoj">Postirano od <%= post.imePost %> na 
                                                     <%= post.datumPost %> vo 
-                                                    <%= post.vremePost %> </p>
+                                                    <%= post.vremeZaDisplay %> </p>
                                     </div>
                             <% }) %>
                             <% }else { %>
