--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,7 +20,7 @@
         </ul>
 
         <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search" method="POST" action="/Search">
-          <input type="search" name="SearchByName" class="form-control" placeholder="Search posts by..." aria-label="Search" >
+          <input type="search" name="SearchByName" class="form-control" placeholder="Search posts by name" aria-label="Search" >
         </form>
       </div>
     </div>
